[gd_scene load_steps=3 format=3 uid="uid://dpx80y0u61dab"]

[ext_resource type="Script" path="res://src/gui/duel_row.gd" id="1_15fxj"]
[ext_resource type="Texture2D" uid="uid://dcvir3orsldq6" path="res://data/ui/die1.png" id="3_x6ye8"]

[node name="DuelRow" type="PanelContainer"]
script = ExtResource("1_15fxj")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="ActionLabel" type="Label" parent="MarginContainer/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Duel"

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/HBoxContainer2"]
layout_mode = 2
alignment = 1

[node name="Die5" type="TextureRect" parent="MarginContainer/HBoxContainer2/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(30, 30)
layout_mode = 2
texture = ExtResource("3_x6ye8")
expand_mode = 3

[node name="Die4" type="TextureRect" parent="MarginContainer/HBoxContainer2/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(30, 30)
layout_mode = 2
texture = ExtResource("3_x6ye8")
expand_mode = 3

[node name="Die3" type="TextureRect" parent="MarginContainer/HBoxContainer2/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(30, 30)
layout_mode = 2
texture = ExtResource("3_x6ye8")
expand_mode = 3

[node name="Die2" type="TextureRect" parent="MarginContainer/HBoxContainer2/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(30, 30)
layout_mode = 2
texture = ExtResource("3_x6ye8")
expand_mode = 3

[node name="Die1" type="TextureRect" parent="MarginContainer/HBoxContainer2/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(30, 30)
layout_mode = 2
texture = ExtResource("3_x6ye8")
expand_mode = 3

[node name="Label" type="Label" parent="MarginContainer/HBoxContainer2/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 10
text = "VS"

[node name="Die1_2" type="TextureRect" parent="MarginContainer/HBoxContainer2/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(30, 30)
layout_mode = 2
texture = ExtResource("3_x6ye8")
expand_mode = 3

[node name="Die2_2" type="TextureRect" parent="MarginContainer/HBoxContainer2/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(30, 30)
layout_mode = 2
texture = ExtResource("3_x6ye8")
expand_mode = 3

[node name="Die3_2" type="TextureRect" parent="MarginContainer/HBoxContainer2/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(30, 30)
layout_mode = 2
texture = ExtResource("3_x6ye8")
expand_mode = 3

[node name="Die4_2" type="TextureRect" parent="MarginContainer/HBoxContainer2/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(30, 30)
layout_mode = 2
texture = ExtResource("3_x6ye8")
expand_mode = 3

[node name="Die5_2" type="TextureRect" parent="MarginContainer/HBoxContainer2/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(30, 30)
layout_mode = 2
texture = ExtResource("3_x6ye8")
expand_mode = 3

[node name="WinnerLabel" type="Label" parent="MarginContainer/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Player 1"
horizontal_alignment = 2
